--- a/client/src/scss/pages/_offerCard.scss
+++ b/client/src/scss/pages/_offerCard.scss
@@ -1,24 +1,31 @@
-.offerSection{padding-top: 200px;
+.offerSection{margin-bottom: 200px;
     .offerWrapper{@include wrapper;
-        .offerCardContainer{ padding: 0 100px;display: flex; gap:20px; justify-content: center; align-items: center;
-            .card{background: #222831;display: flex; flex-flow: wrap; align-items: center; gap: 20px;padding: 20px 15px; width: calc(50% - 10px); border-radius: 5px;  transition: all 0.8s ease-in-out;
-                .imgBox{width: 175px; height: 175px; position: relative; border-radius: 100%; border: 5px solid #ffbe33; overflow: hidden; display: flex; align-items: center; justify-content: center;
-                    img{transition: transform 0.3s ease-in-out;}
-                }
-                .contentBox{
-                    h5{color: #fff; @include font24; font-family: $dancingFont;}
-                    h6{color: #fff; @include font48; font-family: $dancingFont; margin: 10px 0;}
-                    button{color: #fff; background: #ffbe33; padding: 10px 30px; border-radius: 45px; border: none; cursor: pointer;}
-                }
-                &:hover{
-                    .imgBox{img{transform: scale(1.1);}}
-                }
+        h2{@include font40; font-family: $dancingFont; font-weight: $fontW700; color: #000; text-align: center; width: 45%; margin: 0 auto 60px; letter-spacing: 0.8px;
+            &::after{content: ""; width: 20%; height: 2px; background: #000; display: block; margin-top: 10px; margin: 14px auto 0}
+        }
+        // .offerCardContainer{ padding: 0 100px;display: flex; gap:20px; justify-content: center; align-items: center; border: 1px solid red;
+            // .card{background: #222831;display: flex; flex-flow: wrap; align-items: center; gap: 20px;padding: 20px 15px; width: calc(50% - 10px); border-radius: 5px;  transition: all 0.8s ease-in-out;
+            //     .imgBox{width: 175px; height: 175px; position: relative; border-radius: 100%; border: 5px solid #ffbe33; overflow: hidden; display: flex; align-items: center; justify-content: center;
+            //         img{transition: transform 0.3s ease-in-out;}
+            //     }
+            //     .contentBox{
+            //         h5{color: #fff; @include font24; font-family: $dancingFont;}
+            //         h6{color: #fff; @include font48; font-family: $dancingFont; margin: 10px 0;}
+            //         button{color: #fff; background: #ffbe33; padding: 10px 30px; border-radius: 45px; border: none; cursor: pointer;}
+            //     }
+            //     &:hover{
+            //         .imgBox{img{transform: scale(1.1);}}
+            //     }
+            // }
+        .offerCardContainer{display: flex; gap:50px; justify-content: center; align-items: center; width: 90%; margin: 0 auto; 
+            .textBox{width: 50%;
+                p{@include font20; color: #000;font-weight: $fontW400; font-family: $openSans; line-height: 160%; letter-spacing: 0.5px;}
             }
+            .imgBox{width: 50%; border-radius: 20px; overflow: hidden;}
         }
     }
-    @media all and (max-width: 1800px) { padding-top: 180px;}
-    @media all and (max-width: 1600px) { padding-top: 140px;}
-    @media all and (max-width: 1440px) { padding-top: 120px;
+    @media all and (max-width: 1600px) { margin-bottom: 160px;}
+    @media all and (max-width: 1440px) { margin-bottom: 120px;
         .offerWrapper{
             .offerCardContainer{
                 .card{
@@ -27,29 +34,32 @@
             }
         }
     }
-    @media all and (max-width: 1280px) { padding-top: 100px;}
+    @media all and (max-width: 1280px) {margin-bottom: 100px; }
     @media all and (max-width: 1024px) { 
         .offerWrapper{
-            .offerCardContainer{padding: 0px;}
+            h2{width: 100%;}
+            .offerCardContainer{width: 100%;}
         }}
     @media all and (max-width: 820px) { 
         .offerWrapper{
             .offerCardContainer{
-                .card{
-                    .imgBox{width: 130px; height: 130px;}
-                    .contentBox{
-                        button{padding: 10px 20px;}
-                    }
-                }
+                // .card{
+                //     .imgBox{width: 130px; height: 130px;}
+                //     .contentBox{
+                //         button{padding: 10px 20px;}
+                //     }
+                // }
             }
         }
     }
-    @media all and (max-width: 720px) {
+    @media all and (max-width: 720px) {margin-bottom: 80px;
         .offerWrapper{
             .offerCardContainer{ flex-flow: column;
-                .card{width: 100%;
-                    .imgBox{width: 140px; height: 140px;}
-                }
+                .textBox{width: 100%;}
+                .imgBox{width: 100%;}
+                // .card{width: 100%;
+                //     .imgBox{width: 140px; height: 140px;}
+                // }
             }
         }
     }
