--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -17,4 +17,5 @@
 @import 'pages/_about.scss';
 @import 'pages/_table-book.scss';
 @import 'pages/_cart.scss';
-@import 'pages/thankyou.scss';
+@import 'pages/_thankyou.scss';
+@import 'pages/_shimmerMenu.scss';
