--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -17,5 +17,6 @@
 @import 'pages/_about.scss';
 @import 'pages/_table-book.scss';
 @import 'pages/_cart.scss';
+@import 'pages/_order.scss';
 @import 'pages/_thankyou.scss';
 @import 'pages/_shimmerMenu.scss';
