--- a/client/src/scss/pages/_homepage.scss
+++ b/client/src/scss/pages/_homepage.scss
@@ -83,7 +83,7 @@
             }
         } 
     }
-    @media all and (max-width: 720px){margin-bottom: 80px;
+    @media all and (max-width: 720px){margin-bottom: 80px; height: auto; padding-top: 100px;
         .heroWrapper{
             .sliderhead{
                 .sliderContainer{
