--- a/client/src/scss/module/_header.scss
+++ b/client/src/scss/module/_header.scss
@@ -1,4 +1,4 @@
-header{display: flex; justify-content: space-between; align-items: center; @include wrapper;position: absolute; top: 0; left: 0; width: 100%; height: 100px; z-index: 9; background: #222831;
+header{display: flex; justify-content: space-between; align-items: center; @include wrapper;position: fixed; top: 0; left: 0; width: 100%; height: 100px; z-index: 9; background: #222831;
     .logoName{position: relative; z-index: 9;
         span{color: #fff; font-family: $dancingFont; font-weight: $fontW500; @include font48;}
     }
