--- a/client/src/scss/pages/_about.scss
+++ b/client/src/scss/pages/_about.scss
@@ -1,5 +1,5 @@
-.aboutSection{background-color: #222831;
-  .aboutWrapper{@include wrapperMargin; padding: 150px 0 ;
+.aboutSection{background-color: #191b1e;
+  .aboutWrapper{@include wrapperMargin; padding: 200px 0 150px ;
     .container{display: flex; align-items: center; justify-content: space-between; gap: 80px; max-width: 90%; margin: 0 auto;
       .imgBox{width: 50%; display: flex; align-items: center; justify-content: center;
         img{width: 500px;}
@@ -11,8 +11,22 @@
       }
     }
   }
-  @media all and (max-width: 1024px){
-    .aboutWrapper{padding: 180px 0;
+
+  @media all and (max-width: 1800px){
+    .aboutWrapper{padding: 180px 0 150px ;}
+  }
+  @media all and (max-width: 1600px){
+    .aboutWrapper{padding: 160px 0 150px ;}
+  }
+  @media all and (max-width: 1440px){
+    .aboutWrapper{padding: 140px 0 150px ;}
+  }
+  @media all and (max-width: 1280px){
+    .aboutWrapper{padding: 120px 0 150px ;}
+  }
+
+  @media all and (max-width: 1024px){height: 100%; display: flex; align-items: center;
+    .aboutWrapper{padding: 160px 0;
       .container{max-width: 100%;}
     }
   }
