--- a/client/src/scss/pages/_login.scss
+++ b/client/src/scss/pages/_login.scss
@@ -1,5 +1,5 @@
-.loginSection{padding-top: 150px; margin-bottom: 100px;
-    .wrapper{@include wrapperMargin; display: flex; gap: 20px; margin-top: 80px; background: #ECEAE8;
+.loginSection{padding-top: 200px; margin-bottom: 100px;
+    .wrapper{@include wrapperMargin; display: flex; gap: 20px; background: #ECEAE8;
         .imgContainer{width: 50%;
             img{width: 100%; height: 100%; object-fit: cover;}
         }
@@ -22,11 +22,8 @@
             }
         }
     }
-    @media all and (max-width: 1800px){
-        .wrapper{margin-top: 60px;}
-    }
     @media all and (max-width: 1600px){
-        .wrapper{margin-top: 40px;
+        .wrapper{
             .formContainer{
                 form{
                     .inputContainer{
@@ -39,7 +36,7 @@
         }
     }
     @media all and (max-width: 1440px){
-        .wrapper{margin-top: 30px;
+        .wrapper{
             .formContainer{gap: 40px;
                 form{
                     .inputContainer{
@@ -50,6 +47,10 @@
             }
         }
     }
+    @media all and (max-width: 1280px){padding-top: 160px;
+
+    }
+    @media all and (max-width: 1024px){padding-top: 160px; }
     @media all and (max-width: 820px){
         .wrapper{
             .formContainer{gap: 20px;
@@ -62,7 +63,7 @@
             }
         }
     }
-    @media all and (max-width: 720px){
+    @media all and (max-width: 720px){padding-top: 100px; margin-bottom: 80px;
         .wrapper{flex-flow: column;
             .imgContainer{width: 100%;}
             .formContainer{gap: 30px; width: 100%;
