--- a/client/src/scss/pages/_menu.scss
+++ b/client/src/scss/pages/_menu.scss
@@ -1,5 +1,5 @@
 .menuSection{margin-bottom: 200px;
-    .menuWrapper{@include wrapper; padding-top: 150px; 
+    .menuWrapper{@include wrapper; padding-top: 200px; 
         .secHeading{display: flex; justify-content: center; align-items: center; margin-bottom: 45px;
             h2{@include font40; font-family: $dancingFont; font-weight: $fontW700; color: #000; letter-spacing: 0.8px;
                  &::after{content: ""; width: 40%; height: 2px; background: #000; display: block; margin-top: 10px; margin: 14px auto 0}
@@ -68,7 +68,7 @@
         }
     }
     @media all and (max-width: 1600px){margin-bottom: 160px;
-        .menuWrapper{padding-top: 140px;
+        .menuWrapper{padding-top: 160px;
             .contentContainer{
                 .menuCardContainer{
                     .tabContent{
@@ -90,8 +90,8 @@
         }
     }
     @media all and (max-width: 1440px){margin-bottom: 120px;
-        .menuWrapper{padding-top: 120px;
-            .contentContainer{
+        .menuWrapper{padding-top: 140px;
+            .contentContainer{padding: 0 50px;
                 .menuCardContainer{
                     .tabsList{
                         ul{
@@ -114,7 +114,7 @@
         }
     }
     @media all and (max-width: 1280px){margin-bottom: 100px; 
-        .menuWrapper{padding-top: 100px;
+        .menuWrapper{padding-top: 120px;
             .contentContainer{
                 .menuCardContainer{
                     .tabContent{
@@ -132,8 +132,8 @@
             }
         }
     }
-    @media all and (max-width: 1024px){
-        .menuWrapper{
+    @media all and (max-width: 1024px){ 
+        .menuWrapper{padding-top: 160px;
             .contentContainer{padding: 0;
                 .menuCardContainer{
                     .tabContent{
@@ -149,7 +149,7 @@
         }
     }
     @media all and (max-width: 820px){
-        .menuWrapper{
+        .menuWrapper{padding-top: 120px;
             .contentContainer{
                 .menuCardContainer{
                     .tabContent{
@@ -165,7 +165,7 @@
         }
     }
     @media all and (max-width: 720px){margin-bottom: 80px;
-        .menuWrapper{
+        .menuWrapper{padding-top: 100px;
             .secHeading{
                 h2{font-size: 30px;}
             }
