--- a/client/src/scss/pages/_table-book.scss
+++ b/client/src/scss/pages/_table-book.scss
@@ -1,5 +1,5 @@
 .tableSection{
-  .tableWrapper{@include wrapperMargin; padding: 170px 0 120px ;
+  .tableWrapper{@include wrapperMargin; padding: 200px 0 120px ;
     h2{color: #000; font-family: $dancingFont; @include font40; font-weight: bold; margin-bottom: 40px;}
     .mainContainer{display: flex; justify-content: space-between; gap: 50px;
       .formContainer{width: 50%;
@@ -31,12 +31,15 @@
   }
 
   @media  all and (max-width: 1600px) {
-    .tableWrapper{padding: 150px 0 120px;
+    .tableWrapper{padding: 160px 0 120px;
       .mainContainer{
         .formContainer{width: 45%;}
         .mapBox{width: 55%;}
       }
     }
+  }
+  @media  all and (max-width: 1440px) {
+    .tableWrapper{padding: 140px 0 120px;}
   }
   @media  all and (max-width: 1280px) {
     .tableWrapper{padding: 140px 0 100px;
@@ -46,6 +49,9 @@
         .mapBox{width: 55%;}
       }
     }
+  }
+  @media  all and (max-width: 1080px) {
+    .tableWrapper{padding: 160px 0 120px;}
   }
   @media  all and (max-width: 820px) {
     .tableWrapper{padding: 140px 0 100px;
